<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ChangePasswordActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarHome"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/tvHuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/huy"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="#e7e7e7"/>
        <TextView
            android:id="@+id/titleProfile"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/changepass"/>

        <TextView
            android:id="@+id/tvSave"
            android:textSize="18sp"
            android:text="@string/save"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textColor="#e7e7e7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <EditText
            android:id="@+id/edCurrentPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/currentPass"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <EditText
            android:id="@+id/edNewPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/newPass"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <EditText
            android:id="@+id/edReNewPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reNewPass"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>