<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarHome"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/titleProfile"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile"/>

        <TextView
            android:id="@+id/tvSave"
            android:textSize="18sp"
            android:text="@string/save"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textColor="#e7e7e7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgAvatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/avatar1" />

                    <LinearLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circletextview"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imgAvatar">

                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_photo_camera" />
                    </LinearLayout>
                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">
                <TextView
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personalprofile"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:src="@drawable/ic_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/edMail"
                        android:background="@drawable/bg_edittext"
                        android:layout_width="wrap_content"
                        android:textColor="@color/edittext"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="hoangtung@idocnet.com"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_line"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">
                    <ImageView
                        android:src="@drawable/ic_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/edName"
                        android:background="@drawable/bg_edittext"
                        android:layout_width="wrap_content"
                        android:textColor="@color/edittext"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="Hoàng Tùng"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_line"/>

                <LinearLayout
                    android:id="@+id/lnPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:src="@drawable/ic_lock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tvPassword"
                        android:textColor="@color/edittext"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Đổi mật khẩu"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_line"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:src="@drawable/ic_smartphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/edPhone"
                        android:background="@drawable/bg_edittext"
                        android:layout_width="wrap_content"
                        android:textColor="@color/edittext"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="0912 474 557"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_line"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:src="@drawable/ic_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tvCompany"
                        android:textColor="@color/edittext"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Công ty TNHH Idocnet"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@drawable/bg_space"/>

            <TextView
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thiết lập lịch"/>

            <LinearLayout
                android:id="@+id/lnWorld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:paddingBottom="15dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:src="@drawable/ic_worldwide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/edittext"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="Quốc gia"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:textSize="15sp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="Việt Nam"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_line"/>

            <LinearLayout
                android:id="@+id/lnTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:paddingBottom="15dp"
                android:layout_marginBottom="15dp">
                <ImageView
                    android:src="@drawable/ic_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/edittext"
                    android:textSize="15sp"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:text="Múi giờ"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:textSize="15sp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="GMT+7:00"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



</LinearLayout>